fixed image alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,10 +19,10 @@ body {
 }
 
 .classic-header {
-    margin: 0px 100px 0px 100px;
+    margin: 10px 90px 0px 90px;
     width: 90%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 nav ul {
@@ -47,7 +47,7 @@ nav ul {
     display: flex;
     justify-content: center;
     margin-top: -10px;
-    margin-left: -80px;
+    margin-left: -125px;
 }
 
 
@@ -61,7 +61,7 @@ nav {
     border: 0;
     padding: 5px 7px;
     background: #e5e5e5;
-    width: 400px;
+    width: 405px;
     border-radius: 8px;
 }
 
@@ -84,27 +84,23 @@ p {
     font-size: 14px;
 }
 
-/* .main-col p {
+.main-col p {
     margin-top: 10px;
 }
 
 .container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    
-    /* justify-content: flex-end; */
+   
+}
+
+.image-conatiner {
+
+    float: left;
+
+}
 
 
-/* .container img {
-
-    position: relative;
-    z-index: 20;
-    width: 150px;
-    padding: 10px;
-    
-
-} */ 
 
 /* Grid Styles */
 
@@ -117,7 +113,7 @@ p {
   
   }
 .col {
-    padding: 30px;
+    padding: 20px;
   }
   
 .fixed {
@@ -135,7 +131,7 @@ p {
 }
 
 .grid p {
-    margin-top: -8px;
+    margin-top: -15px;
 }
 
 hr {
@@ -153,6 +149,23 @@ h3 {
     color: #999;
     font-size: 16px;
 }
+
+h4 {
+    margin-top: -3px;
+    font-size: 14px;
+}
+
+.who-to-follow {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.who-to-follow img {
+    width: 270px;
+}
+
 
 footer {
     background-color: #f2f2f2;
